Added support for AWS Cognito x-www-form-urlencoded request, bump micronaut version to 4.8
